Fix padding issue causing media query 660px and below to be off center

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -325,7 +325,7 @@ footer {
 
 .social-links>li {
     display: inline;
-    padding-right: 30px;
+    padding-right: 20px;
     align-items: center;
 }
 
@@ -680,7 +680,6 @@ textarea {
 
     .image-container {
         height: 1100px;
-        margin-left: 20px;
 
     }
 
